--- a/report/project_report.Rmd
+++ b/report/project_report.Rmd
@@ -60,10 +60,10 @@ data("tst_data")
 ```
 
 # Data
-The original dataset had 49 total attributes, including attributes related to traffic, location, weather, points of interest, and time of day.  Pre-processing the data set was necessary to allow us to focus on the variables and observations of real relevance to our aim. Although we started out with 48 dependent variables and one outcome variable, there were several reasons for removing most of the attributes, including:  
+The original dataset had 49 total attributes, including attributes related to traffic, location, weather, points of interest, and time of day.  Pre-processing the data set was necessary to allow us to focus on the variables and observations of real relevance to our aim. Although we started out with 48 independent variables and one outcome variable, there were several reasons for removing most of the attributes, including:  
 
 1. The attribute had at least 60% missingness.
-    + Wind Chill and Precipitation
+    + Wind Chill (which is also a function of Temperature and Wind speed) and Precipitation (which also has low variability)
 2. The attribute had very low or no variability across the observations.  
     + after aggregating the County variable into urban and rural factor levels, it was apparent that about 95% of the accident data was derived from urban areas, therefore variables such as County, Zip-Code, and City were not of use 
     + most of the points of interest variables except Crossing and Traffic Signal
@@ -537,7 +537,7 @@ kable_styling(latex_options = c("repeat_header", "scale_down"))
 
 Although our accuracy values appear very high at first, we realize that API Source the data came from can greatly affect the results. This "batch effect" is undesirable when building a prediction model that should integrate these sources seamlessly. Aside from this issue, the most important variable in predicting car accident related traffic severity appears to be Interstate. In terms of our models, the Proportional Odds Model, Ordinal Net, Random Forest, and Ordinal Forest seem to perform similarly (in terms of accuracy) on our dataset with an outcome factor with 3 levels although the time to train varied widely. 
 
-It is also clear that summary statistics such as accuracy/Cohen's Kappa do not always tell the whole story. Although they had similar accuracies, the confusion matrices showed us that the likelihood-based models on the full training data had no predictions for severity class 3, whereas the forest-based machine learning models did. This could be because of the Random Forest's ability to account for more complicated interactions between the variables, where our proportional odds model had no interaction terms included. 
+It is also clear that summary statistics such as accuracy/Cohen's Kappa do not always tell the whole story. Although they had similar accuracies, the confusion matrices showed us that the likelihood-based models on the full training data had no predictions for severity class 3, whereas the forest-based machine learning models did. This could be because of the Random Forest's ability to account for more complicated interactions between the variables, whereas our proportional odds model had no interaction terms included. 
 
 We also discovered there is a "batch effect" in that the Source predictor is a very important variable in predicting severity class, although it would ideally have no effect on the outcome. It appears that the MapQuest data alone is more successful in predicting severity of other MapQuest based accidents.
 
@@ -555,7 +555,7 @@ There is also lack of information about factors that we believe may be important
 
 We assumed that the proportional odds assumption holds and also assumed there were no longitudinal effects in our data. Testing both of these assumptions would be needed moving forward to ensure our methods are sound. Additionally, adding a penalty feature to our own proportional odds model functions would be a next step, to see how that could potentially improve the likelihood-based models, and potentially allows for evaluating interactions or more variables from other data sets.
 
-It would also be of interest to aggregate our outcome further into two severity classes by combining classes 2 and 3 in order compare models of this type to those we have already built. It would also be useful to try and account for the imbalanced data in other ways, potentially by using a weighted Random Forest, or even by borrowing data from other states in the minority classes.
+It would also be of interest to aggregate our outcome further into two severity classes by combining classes 2 and 3 in order to compare models of this type to those we have already built. It would also be useful to try and account for the imbalanced data in other ways, potentially by using a weighted Random Forest, or even by borrowing data from other states in the minority classes.
 
 In terms of the data, we would like to expand into more states and also incorporate local law enforcement data sets that contain information on the severity of car accidents in terms of injuries, fatalities, etc. One example source of this data is [Town of Cary Crash Data](https://data.world/townofcary/cpd-crash-incidents).
 
